--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Scaffold out an RichMedia HTML5 banner (with support to Weborama add server)",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://bitbucket.org/antiloop-studio/generator-richmedia",
   "author": {
     "name": "Antiloop.io",
     "email": "hello@antiloop.io",
