--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "generator-richmedia",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Scaffold out an RichMedia HTML5 banner (with support to Weborama add server)",
   "license": "MIT",
-  "repository": "https://bitbucket.org/antiloop-studio/generator-richmedia",
+  "repository": "https://github.com/arturmiglio/generator-richmedia",
   "author": {
-    "name": "Antiloop.io",
-    "email": "hello@antiloop.io",
-    "url": "http://antiloop.io"
+    "name": "Artur Miglio",
+    "email": "arturmiglio@gmail.com",
+    "url": "http://arturmiglio.com"
   },
   "main": "app/index.js",
   "scripts": {
